# leaf-framework

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  config.ini  config.yaml  config.yml  fl.sh  flfn.sh  local_install.sh  mypy.ini  pyproject.toml  register.py  requirements.txt  start.py
cloud/: config.yaml  docker-compose.yml  start.sh  stop.sh
cloud/gitlab_runner/: Dockerfile  build.sh  entrypoint.sh  pyproject.toml
cloud/grafana_data/: grafana.db
cloud/nodered_data/: .config.runtime.json  .config.runtime.json.backup  .config.users.json  .config.users.json.backup  .flows.json.backup  .flows_cred.json.backup  flows.json  flows_cred.json
cloud/pgadmin_data/: pgadmin4.db
cloud/telegraf/: telegraf.conf
core/: config.ini  config.py  config_loader.py  keydb.py  keydb_client.py  mqtt_client.py  start.py
core/adapters/: equipment_adapter.py
core/error_handler/: error_holder.py  exceptions.py
core/measurement_terms/: manager.py  measurements.yaml
core/metadata_manager/: equipment_data.yaml  metadata.py
core/setup_wizard/: leaf_wizard.py  leaf_wizard_mainwindow.py  leaf_wizard_tools.py
docker/: Dockerfile  build.sh  requirements.txt  start.sh
docs/figures/: logo.ai  logo_dark.ai
leaf/: register.py  start.py
leaf/adapters/: equipment_adapter.py
leaf/config/: config.yaml
leaf/error_handler/: error_holder.py  exceptions.py
leaf/interface/: adapters.py  config.py  dashboard.py  docs.py  logs.py  main.py
leaf/measurement_terms/: manager.py
leaf/metadata_manager/: equipment_actions.yaml  metadata.py
leaf/registry/: discovery.py  registry.py
leaf/ui/: interface.py
leaf/utility/: running_utilities.py
test-reports/: report.xml
tests/: mock_mqtt_client.py  test_config.py  test_config.yaml  test_config_secret.py  test_config_secret.yaml  test_error_holder.py  test_exceptions.py  test_hello_world_adapter.py  test_measurement_manager.py  test_mqtt.py  test_run_local.py  test_run_utilities.py  test_start.py
tests/generic_adapter/: adapter.py  device.json
tests/mock_functional_adapter/: adapter.py  device.json  interpreter.py
tests/static_files/: IndPenSim_V3_Batch_1_top10.csv  indpensim.yaml  opentrons_log_data.keep_log  test_config_keydb.yaml  test_config_mqtt_with_keydb_fallback.yaml  upload_test.txt  veenkampen.csv  veenkampen.yaml
tests/test-reports/: report.xml
tests/test_adapters/: test_adapter_array.py  test_biolector_adapter.py  (+10 more)
tmp_existing_pot_keep/: config_loader.py
(+139 files in other folders)
