[tool.poetry]
name = "core"
version = "0.1.0"
description = "LabEquipment Adapter Framework (LEAF)"
authors = ["core"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://gitlab.com/LabEquipmentAdapterFramework/leaf"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
coverage = "^7.0"